--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ascii-table": "0.0.9",
     "common-tags": "^1.8.0",
-    "discord.js": "^11.5.1"
+    "discord.js": "^11.5.1",
+    "xml2js": "^0.4.22"
   }
 }
