--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "ascii-table": "0.0.9",
     "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
-    "opusscript": "0.0.7",
-    "xml2js": "^0.4.22",
-    "ytdl-core": "^0.29.7"
+    "xml2js": "^0.4.22"
   }
 }
