--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "ascii-table": "0.0.9",
     "common-tags": "^1.8.0",
     "discord.js": "^11.5.1",
-    "ms": "^2.1.2",
     "request": "^2.88.0",
+    "timestring": "^6.0.0",
     "xml2js": "^0.4.22"
   }
 }
